# SCPI-toolbox

./: README.md  SCPI_interperater.py  meson.build  org.gnome.Example.json
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
po/: meson.build
src/: knownDevices.db  main.py  meson.build  scpi-toolbox.in  scpi_powersupply_control.in  scpitools.py  settings.py  window.py  window.ui
